# docs

./: .gitignore  mkdocs-api.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs-deploy.yml
docs/: index.md
docs/api-reference/: api.md  core.md  dashboard.md  data.md  index.md  lakehouse.md  middleware.md  ml.md  plugins.md  warehouse.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2026-03-28-welcome.md
docs/contributing/: development.md  index.md
docs/getting-started/: index.md  installation.md  quickstart.md
overrides/: main.html
overrides/templates/: jsonld-article.html
scripts/: assemble.sh  build-api-reference.sh  generate_release_post.py
static/: CNAME  robots.txt
templates/: jsonld-software.html  release-post.md.j2
tests/: test_generate_release_post.py
