[project]
name = "dataenginex-docs"
version = "0.1.0"
description = "Unified documentation for the DataEngineX ecosystem"
requires-python = ">=3.13"
dependencies = [
    "zensical>=0.0.30",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "mkdocs-rss-plugin>=1.17",
    "jinja2>=3.1",
    "pillow>=11.0",
    "cairosvg>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
